# big_red_guy

./: .gitignore  Cargo.toml  README.md  Rocket.toml  shell.nix
backend/: Cargo.toml  Rocket.toml  bacon.toml  build.rs  config.toml.template
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20221102_220210_add_parties_table.rs  m20221103_141655_add_lists.rs  m20221125_230206_add_notes_to_fulfillments.rs  m20231031_164126_add_transactional_events_table.rs  m20260120_153240_add_settings_table.rs
backend/src/: config.rs  lib.rs  main.rs  queue.rs  rocket_anyhow.rs  utils.rs
backend/src/db/: pool.rs
backend/src/email/: builder.rs  mod.rs  smtp.rs
backend/src/email/templates/: base.html  reset-password.html
backend/src/entities/: mod.rs  parties.rs  party_memberships.rs  prelude.rs  settings.rs  transactional_events.rs  users.rs  wishlist_item_list_assignments.rs  wishlist_item_user_fulfillments.rs  wishlist_items.rs  wishlist_party_assignments.rs  wishlists.rs
backend/src/events/: initiate_password_reset_flow.rs  mod.rs
backend/src/routes/: default.rs  mod.rs  statics.rs
backend/src/routes/api/: default.rs  forgot_password.rs  login.rs  logout.rs  mod.rs  register.rs  reset_password.rs
backend/src/routes/api/me/: index.rs  mod.rs  pfp.rs
backend/src/routes/api/me/fulfillments/: index.rs
backend/src/routes/api/me/fulfillments/id/: index.rs
backend/src/routes/api/me/parties/: id.rs  index.rs  mod.rs
backend/src/routes/api/me/parties/id/: fulfillments.rs  index.rs  mod.rs
backend/src/routes/api/me/wishlist_items/: id.rs
backend/src/routes/api/me/wishlist_items/id/: fulfillments.rs  index.rs  mod.rs
backend/src/routes/api/me/wishlists/: id.rs  index.rs
backend/src/routes/api/me/wishlists/id/: index.rs  mod.rs
backend/src/routes/api/parties/: id.rs  index.rs
backend/src/routes/api/users/: id.rs  index.rs  me.rs
backend/src/routes/api/wishlist_items/: id.rs
backend/src/routes/api/wishlists/: id.rs  index.rs  mod.rs
backend/src/routes/api/wishlists/items/: index.rs
backend/src/utils/: macros.rs  mod.rs  password.rs  templating.rs
backend/templates/: home.html.tera  index.html.tera  view_wishlist.html.tera  wishlist_index.html.tera
(+135 files in other folders)
