[package]
name = "big_red_guy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "migration" }
anyhow = "^1"
rand = "^0"
argon2 = "0.5.2"
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
serde = "^1"
sea-orm-rocket = "^0"
tokio = "^1"
nanoid = "0.4.0"
rust-embed = "^8"
lettre = "0.11"

[dependencies.sea-orm]
version = "^0"
features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
]
